# python-fastapi-kickstarter

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  app.py  docker-compose.yml  flake.nix  flasktest.py  pyproject.toml  shell.nix  shell_bc.nix
.direnv/: flake-profile-1-link  flake-profile-2-link
api/: main.py  run.py
api/components/db/: postgres.py
api/components/todo/: models.py
api/health/: live_probe.py  readiness_probe.py
docs/: details.MD
nginx/: nginx.conf
