[tool.poetry]
name        =  "your-fast-app"
version     =  "0.1.0"
description =  "A simple fast application"
authors     =  ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python          = "^3.9"
fastapi         = "^0.108.0"
uvicorn         = {extras = ["standard"], version = "^0.25.0"}
python-dotenv   = "^1.0.0"
pre-commit      = "3.6.0"
pylint          = "3.0.3"
testcontainers  = "3.7.1"
bcrypt          = "4.1.2"

[tool.poetry.dev-dependencies]
# Add any development dependencies here, such as testing libraries

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
